testsuite/tests/typecheck/should_fail/T22912.stderr
T22912.hs:17:16: error: [GHC-39999]
    • Could not deduce ‘Implies c’
        arising (via a quantified constraint) from a use of ‘go’
      from the context: Exactly (Implies c)
        bound by a quantified constraint at T22912.hs:17:16-17
      When trying to solve the quantified constraint
        Exactly (Implies c) => Implies c
        arising from a use of ‘go’
      Possible fix:
        add (Implies c) to the context of
          the type signature for:
            anythingDict :: forall (c :: Constraint). Dict c
    • In the expression: go
      In an equation for ‘anythingDict’:
          anythingDict
            = go
            where
                go :: (Exactly (Implies c) => Implies c) => Dict c
                go = Dict

